--- a/app/src/main/res/layout/fragment_lv1.xml
+++ b/app/src/main/res/layout/fragment_lv1.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".home.lv1Fragment"
@@ -24,6 +26,7 @@
             android:padding="16dp">
 
             <ImageView
+                android:id="@+id/stance_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/lv1_tc_01"
@@ -32,6 +35,7 @@
                 />
 
             <ImageView
+                android:id="@+id/paddling_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
@@ -40,6 +44,7 @@
                 android:adjustViewBounds="true"
                 />
             <ImageView
+                android:id="@+id/popup_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
@@ -48,6 +53,7 @@
                 android:adjustViewBounds="true"
                 />
             <ImageView
+                android:id="@+id/takeoff_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
@@ -62,3 +68,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
