--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -14,38 +14,78 @@
     </data>
 
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".onboard.RegisterFragment">
 
+        <ImageView
+            android:id="@+id/login_flo_logo_iv"
+            android:layout_width="142dp"
+            android:layout_height="92dp"
+            android:layout_marginTop="100dp"
+            android:src="@drawable/ic_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.25" />
+
         <TextView
-            android:id="@+id/intro_text"
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:text="똑똑 시작하기"
-
-            android:textSize="25sp"
+            android:layout_marginTop="28dp"
+            android:text="환영합니다!"
+            android:textColor="#0075FF"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/login_flo_logo_iv" />
 
         <TextView
-            android:id="@+id/edit_text_description"
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="지금 드는 생각을 써보세요"
-            android:textSize="20sp"
+            android:layout_marginTop="52dp"
+            android:text="만 있으면 서핑 성지 제주에서 "
+            android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/intro_text" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/login_flo_logo_iv" />
 
-<!--        <LinearLayout-->
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="31dp"
+            android:layout_height="23dp"
+            android:layout_marginTop="52dp"
+            android:text="구피"
+            android:textColor="#0075FF"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.297"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_flo_logo_iv" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="76dp"
+            android:text="나도 이제 뉴비 탈출?"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_flo_logo_iv" />
+
+        <!--        <LinearLayout-->
 <!--            android:id="@+id/linearLayout"-->
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
@@ -85,7 +125,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_description" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 <!--        <ImageButton-->
 <!--            android:id="@+id/google_register_button"-->
